@startuml
'https://plantuml.com/class-diagram

package entities
{
    class Parcel
    {
        - id: int
        - trackingNumber: String
        - senderName: String
        - recieverName: String
        - deliveryStatus: DeliveryStatus
        - updated: LocalDateTime
    }
    class Location
    {
        - id: int
        - name: String
        - address: String
        - latitude: double
        - longitude: double
    }
    class Shipment
    {
        - id: int
        - package: Parcel
        - sourceLocation: Location
        - destinationLocation: Location
        - shipmentCreatedDate: LocalDateTime
        - shipmentUpdatedDate: LocalDateTime
    }
    Shipment "*" --* "1" Parcel
    Shipment "*" --* "1" Location


}
@enduml